# WebPan

./: Cargo.toml  env.example
src/: lib.rs  main.rs
src/api/: auth.rs  mod.rs  user.rs
src/config/: settings.rs
src/handlers/: mod.rs  user_handler.rs
src/models/: mod.rs  user_model.rs
src/services/: mod.rs
src/tests/: integration_test.rs
src/utils/: http_client.rs  mod.rs  token_manager.rs
