[package]
name = "WebPan"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.90"
dotenv = "0.15.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
